feat: Add ArDrive Turbo bundler support with free tier
- Added @ardrive/turbo-sdk for free uploads (< 500KB) and USD-based turbo credits
- Created TurboClient class with balance checking and upload cost estimation
- Updated PASPSkill to use bundler by default with fallback to direct upload
- Added new commands: check-balance, get-upload-cost, get-purchase-url
- Updated config with bundler options and 500KB free tier limit

Priority #1 from todo: Enable free profile uploads for PASP adoption

--- a/skills/pasp/package.json
+++ b/skills/pasp/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "arweave": "^1.15.0",
     "js-yaml": "^4.1.0",
-    "marked": "^12.0.0"
+    "marked": "^12.0.0",
+    "@ardrive/turbo-sdk": "^1.14.4"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
